example/secondfile/objects/End_Customer__c.object
<CustomObject>
    <fields>
        <fullName>API_IPQ_EndCust__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to be set true for IPQ Requests</description>
        <label>API IPQ EndCust</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Anira_Custom_Discount__c</fullName>
        <label>Anira Custom Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assigned_Profile__c</fullName>
        <label>Assigned Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Website__c</fullName>
        <label>Business Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CDG_Label__c</fullName>
        <formula>End_Customer_ID__c + &quot;-&quot; + LEFT(Name,15)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CDG Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDG__c</fullName>
        <label>CDG</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>This field is used to give the reason for rejection of endcustomer from SP.</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company_Legal_Name__c</fullName>
        <label>Company Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS_Number__c</fullName>
        <label>DUNS Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS__c</fullName>
        <label>DUNS #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_End_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does a duplicate deal exist?</inlineHelpText>
        <label>Duplicate End Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>End_Customer_ID__c</fullName>
        <displayFormat>EC-{00000}</displayFormat>
        <externalId>true</externalId>
        <label>End-Customer ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Endcustomer_Status__c</fullName>
        <description>This is to set the endcustomer status. When it is created by EBM users.</description>
        <label>Endcustomer Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Shared</fullName>
                    <default>true</default>
                    <label>Shared</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Federal_Tax_ID__c</fullName>
        <label>Federal Tax ID #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floor__c</fullName>
        <label>Location Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <label>Legal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Linkedin_Account__c</fullName>
        <label>Linkedin Account</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Mailing_Street_Address__c</fullName>
        <label>Mailing Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Initial__c</fullName>
        <label>Middle Initial</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Named_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Named Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Office_Phone__c</fullName>
        <label>Office Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Other_Contact_Phone__c</fullName>
        <label>Other Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Method__c</fullName>
        <label>Preferred Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAART_ID__c</fullName>
        <label>SAART ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Role__c</fullName>
        <label>Sales Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Manager</fullName>
                </value>
                <value>
                    <fullName>Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Technical Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Profile__c</fullName>
        <label>Secondary Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_to_ROME__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field used to send Out Bound Message to ROME</description>
        <label>Send to ROME</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shared_EC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shared EC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suite__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apartments</fullName>
                </value>
                <value>
                    <fullName>Basement</fullName>
                </value>
                <value>
                    <fullName>Building</fullName>
                </value>
                <value>
                    <fullName>Floor</fullName>
                </value>
                <value>
                    <fullName>Hangar</fullName>
                </value>
                <value>
                    <fullName>Lot</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>PH</fullName>
                </value>
                <value>
                    <fullName>Pier</fullName>
                </value>
                <value>
                    <fullName>Room</fullName>
                </value>
                <value>
                    <fullName>Slip</fullName>
                </value>
                <value>
                    <fullName>Space</fullName>
                    <label>SPACE</label>
                </value>
                <value>
                    <fullName>STE</fullName>
                </value>
                <value>
                    <fullName>Stop</fullName>
                </value>
                <value>
                    <fullName>Suite</fullName>
                </value>
                <value>
                    <fullName>Trlr</fullName>
                </value>
                <value>
                    <fullName>Unit</fullName>
                </value>
                <value>
                    <fullName>Wing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twitter_Account__c</fullName>
        <label>Twitter Account</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>ZIP</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip (long)</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>End Customer</label>
    <listViews>
        <fullName>Named_Accounts</fullName>
        <columns>NAME</columns>
        <columns>End_Customer_ID__c</columns>
        <columns>First_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Named Accounts</label>
    </listViews>
    <nameField>
        <label>End Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>End Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>EndCustomerName_Length</fullName>
        <active>true</active>
        <description>Verify the length of the End Customer Name is not greater than 50 characters.</description>
        <errorConditionFormula>LEN(Name) &gt; 50</errorConditionFormula>
        <errorMessage>End Customer Name cannot be greater than 50 characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_on_City</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX(City__c,&apos;[A-Z,a-z, ]*&apos;))</errorConditionFormula>
        <errorDisplayField>City__c</errorDisplayField>
        <errorMessage>City field should not contain special characters and number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_on_State</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR( NOT(ISBLANK(State__c))),
OR(
LEN(State__c) &lt; 2,
NOT(
CONTAINS(&quot;AL:AK:AZ:AR:CA:CO:CT:DE:DC:FL:GA:HI:ID:&quot; &amp;
&quot;IL:IN:IA:KS:KY:LA:ME:MD:MA:MI:MN:MS:MO:MT:NE:NV:NH:&quot; &amp;
&quot;NJ:NM:NY:NC:ND:OH:OK:OR:PA:RI:SC:SD:TN:TX:UT:VT:VA:&quot; &amp;
&quot;WA:WV:WI:WY&quot;,State__c)
)))</errorConditionFormula>
        <errorDisplayField>State__c</errorDisplayField>
        <errorMessage>State field should contain only 2 characters,with below valid codes:
AL:AK:AZ:AR:CA:CO:CT:DE:DC:FL:GA:HI:ID:
IL:IN:IA:KS:KY:LA:ME:MD:MA:MI:MN:MS:MO:MT:NE:NV:NH:
NJ:NM:NY:NC:ND:OH:OK:OR:PA:RI:SC:SD:TN:TX:UT:VT:VA:
WA:WV:WI:WY</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_on_ZipCode</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX(Zip__c,&apos;[0-9]*&apos;))</errorConditionFormula>
        <errorDisplayField>Zip__c</errorDisplayField>
        <errorMessage>Zip should contain only numeric values.</errorMessage>
    </validationRules>
</CustomObject>